# gym-os2r

./: .gitignore  .tags  .tags1  CMakeLists.txt  README.md  __init__.py  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
BB_gym_Envs/: __init__.py
BB_gym_Envs.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
BB_gym_Envs/common/: __init__.py  mp_env.py
BB_gym_Envs/common/vec_env/: subproc_vec_env.py  vec_env.py
BB_gym_Envs/models/: __init__.py  monopod.py
BB_gym_Envs/monitor/: monitor.py
BB_gym_Envs/randomizers/: __init__.py  monopod.py  monopod_fixed_hip.py  monopod_fixed_hip_boom_yaw.py  monopod_no_rand.py
BB_gym_Envs/tasks/: __init__.py  monopod_base.py  monopod_v1_balancing.py  monopod_v1_balancing_fixed_hip.py  monopod_v1_balancing_fixed_hip_and_boom_yaw.py  monopod_v2_balancing.py
docs/sphinx/: CMakeLists.txt  conf.py  index.html  index.rst
docs/sphinx/apidoc/gym-os2r/: gym_os2r.common.rst  gym_os2r.models.config.rst  gym_os2r.rewards.rst  gym_os2r.rst
docs/sphinx/gym-os2r_docs/apidoc/gym-os2r/: gym_os2r.common.vec_env.rst  gym_os2r.models.config.rst  gym_os2r.models.models.rst  gym_os2r.models.rst  gym_os2r.rewards.rst  gym_os2r.runtime.rst
docs/sphinx/gym-os2r_docs/getting_started/: index.rst  introduction.rst  next_steps.rst
docs/sphinx/gym-os2r_docs/introduction/: index.rst  install.rst
docs/sphinx/gym-os2r_docs/python/gym-os2r/: gym_os2r.common.rst  gym_os2r.randomizers.rst  gym_os2r.rst  gym_os2r.runtimes.rst  gym_os2r.tasks.rst
examples/: bug.py  example_hip_fixed.py  example_hip_fixed_and_boom_yaw.py  example_multiprocessing_epochs.py  example_multiprocessing_monitoring.py  example_singleprocess_randomizers.py  fixed.py  fixed_hip.py  fixed_hip_and_boom_yaw.py  get_state_info.py  hip_fixed.py  hip_fixed_and_boom_yaw.py  ignition_interaction.py  launch_monopod.py  launch_monopod_example.py  launch_monopod_multiprocess.py  launch_monopod_multiprocess_epochs.py  launch_monopod_visual_example.py  minimal_example.py  minimal_example_testing.py  multiprocessing_epochs.py  multiprocessing_monitoring.py  singleprocess.py  singleprocess_monitor.py  testing_env.py
gym_bb/: __init__.py
gym_bb/common/: __init__.py  make_envs.py  mp_env.py
gym_bb/common/vec_env/: subproc_vec_env.py  vec_env.py
gym_bb/config/: config.py
gym_bb/config/default/: settings.yaml
gym_bb/models/: __init__.py  monopod.py
gym_bb/models/config/: __init__.py
gym_bb/models/config/default/: settings.yaml
gym_bb/models/models/monopod/: monopod.urdf
gym_bb/models/models/monopod-fixed/: monopod-fixed.urdf
gym_bb/models/models/monopod-fixed_hip/: monopod-fixed_hip.urdf
gym_bb/models/models/monopod-old/: model.config  monopod-old.urdf
gym_bb/models/models/monopod-old-fixed/: model.config  monopod-old-fixed.urdf
gym_bb/models/models/monopod-old-fixed_hip/: monopod-old-fixed_hip.urdf
gym_bb/models/models/monopod-old-fixed_hip/meshes/: hip_Link.STL
gym_bb/models/models/monopod-old/meshes/: base_link.STL  upper_leg_Link.STL
gym_bb/monitor/: __init__.py  monitor.py
gym_bb/randomizers/: monopod.py  monopod_no_rand.py
gym_bb/rewards/: __init__.py  reward_definition.py  rewards.py  rewards_utils.py
gym_bb/runtime/: realtime_runtime.py
gym_bb/tasks/: __init__.py  monopod.py  monopod_base.py  monopod_builder.py  monopod_v1_0_0_balancing.py  monopod_v1_0_1_balancing.py  monopod_v1_balancing.py  monopod_v1_balancing_fixed_hip.py  monopod_v1_balancing_fixed_hip_and_boom_yaw.py  monopod_v2_balancing.py
gym_bb/tasks/base/: __init__.py  monopod_base.py  monopod_builder.py
gym_bb/tasks/rewards/: __init__.py  calculate_balancing_rewards.py  reward_definition.py
gym_bb/utils/: reset.py
gym_os2r/: __init__.py
gym_os2r/common/: __init__.py  make_envs.py
gym_os2r/common/vec_env/: __init__.py  subproc_vec_env.py  vec_env.py
gym_os2r/models/: __init__.py
gym_os2r/models/config/: __init__.py
gym_os2r/models/config/default/: settings.yaml
gym_os2r/models/models/: __init__.py
gym_os2r/models/models/ground_plane/: ground_plane.sdf
gym_os2r/models/models/monopod/: model.config  monopod.urdf
gym_os2r/models/models/monopod-fixed/: model.config  monopod-fixed.urdf
gym_os2r/models/models/monopod-fixed/meshes/: hip.STL  upper_leg.STL
gym_os2r/models/models/monopod-fixed_hip/: model.config  monopod-fixed_hip.urdf
gym_os2r/models/models/monopod-fixed_hip/meshes/: boom.STL  lower_leg.STL
gym_os2r/models/models/monopod-fixed_hip_visualizer/: model.config  monopod-fixed_hip_visualizer.urdf
gym_os2r/models/models/monopod-fixed_hip_visualizer/meshes/: hip.STL  lower_leg.STL  upper_leg.STL
gym_os2r/models/models/monopod-old/: monopod-old.urdf
gym_os2r/models/models/monopod-old-fixed/: monopod-old-fixed.urdf
gym_os2r/models/models/monopod-old-fixed/meshes/: boom_Link.STL
gym_os2r/models/models/monopod-old-fixed_hip/: model.config  monopod-old-fixed_hip.urdf
gym_os2r/models/models/monopod-old-fixed_hip/meshes/: lower_leg_Link.STL
gym_os2r/models/models/monopod-simple/: model.config  monopod-simple.urdf
gym_os2r/models/models/monopod-simple/meshes/: central_pivot.STL
gym_os2r/randomizers/: __init__.py  monopod.py  monopod_no_rand.py
gym_os2r/rewards/: __init__.py  rewards.py  rewards_utils.py
gym_os2r/runtime/: __init__.py  realtime_runtime.py
gym_os2r/runtimes/: __init__.py  gazebo_runtime.py
gym_os2r/tasks/: __init__.py  monopod.py  monopod_no_norm.py  monopod_unnormalized.py
gym_os2r/utils/: reset.py
tests/: tests_general.py
